--- a/KinectOdo/mainpage.dox
+++ b/KinectOdo/mainpage.dox
@@ -1,26 +1,5 @@
 /**
-\mainpage
-\htmlinclude manifest.html
-
-\b KinectOdo is ... 
-
-<!-- 
-Provide an overview of your package.
--->
-
-
-\section codeapi Code API
-
-<!--
-Provide links to specific auto-generated API documentation within your
-package that is of particular interest to a reader. Doxygen will
-document pretty much every part of your code, so do your best here to
-point the reader to the actual API.
-
-If your codebase is fairly large or has different sets of APIs, you
-should use the doxygen 'group' tag to keep these APIs together. For
-example, the roscpp documentation has 'libros' group.
--->
-
-
+EXTRACT_PRIVATE=YES
+\INPUT= /home/benema/ros_tutorials/Kinect-Pixhawk/pixhawk-kinect-pkg/KinectOdo/src/extractFeature.cpp /home/benema/ros_tutorials/Kinect-Pixhawk/pixhawk-kinect-pkg/KinectOdo/src/extractFeature.h /home/benema/ros_tutorials/Kinect-Pixhawk/pixhawk-kinect-pkg/KinectOdo/src/main.cpp
+FILE_PATTERNS    = *.cpp *.h
 */
